# document-py

./: README.md  pyproject.toml
document-py/src/: document.py
document_py/: __init__.py
document_py/src/: document.py
tests/: test.py  test_to_dict_from_dict.py
